[package]
name = "atm_parser_helper_common_syntax"
description = "Parsing utilities for the common syntax specification."
version = "2.0.0"
repository = "https://github.com/AljoschaMeyer/atm_parser_helper_common_syntax"
authors = ["Aljoscha Meyer <mail@aljoscha-meyer.de>"]
edition = "2021"
license = "CC-PDDC"

[dependencies]
atm_parser_helper = "1.0.0"
arbitrary = { version = "1.0.3", optional = true, features = ["derive"] }
pretty_dtoa = "0.3.0"
